--- a/book/src/custom-extensions/sha256.md
+++ b/book/src/custom-extensions/sha256.md
@@ -1,7 +1,7 @@
 # OpenVM Sha256
 
 The OpenVm Sha256 extension provides tools for using the Sha256 hash function. Refer [here][https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf] for more details on the Sha256.
-The functional part is provided by the `openvm-sha256-guest` crate, which is a guest library that can be used in any OpenVM program. 
+The functional part is provided by the `openvm-sha256-guest` crate, which is a guest library that can be used in any OpenVM program.
 
 ## Functions for guest code
 
@@ -13,6 +13,7 @@ The OpenVM Sha256 Guest extension provides two functions for using in your guest
 See the full example [here](https://github.com/openvm-org/openvm/blob/main/examples/sha256).
 
 ### Example:
+
 ```rust
 extern crate alloc;
 
@@ -51,20 +52,21 @@ hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 
 Keccak guest extension also provides another way to use the native Sha256 implementation. It provides a function that is meant to be linked to other external libraries. The external libraries can use this function as a hook for the Sha256 native implementation. Enabled only when the target is `zkvm`.
 
-- `native_sha256(input: *const u8, len: usize, output: *mut u8)`: This function has `C` ABI. It takes in a pointer to the input, the length of the input, and a pointer to the output buffer.
+- `zkvm_sha256_impl(input: *const u8, len: usize, output: *mut u8)`: This function has `C` ABI. It takes in a pointer to the input, the length of the input, and a pointer to the output buffer.
 
 In the external library, you can do the following:
 
 ```rust
 extern "C" {
-    fn native_sha256(input: *const u8, len: usize, output: *mut u8);
+    fn zkvm_sha256_impl(input: *const u8, len: usize, output: *mut u8);
 }
 
 fn sha256(input: &[u8]) -> [u8; 32] {
-    #[cfg(target_os = "zkvm")] {
-    let mut output = [0u8; 32];
+    #[cfg(target_os = "zkvm")]
+    {
+        let mut output = [0u8; 32];
         unsafe {
-            native_sha256(input.as_ptr(), input.len(), output.as_mut_ptr() as *mut u8);
+            zkvm_sha256_impl(input.as_ptr(), input.len(), output.as_mut_ptr() as *mut u8);
         }
         output
     }
