--- a/book/src/guest-libs/k256.md
+++ b/book/src/guest-libs/k256.md
@@ -1,6 +1,6 @@
 # K256
 
-The K256 guest library uses [`openvm-ecc-guest`](../custom-extensions/ecc.md) to provide elliptic curve operations over the Secp256k1 curve.  
+The K256 guest library uses [`openvm-ecc-guest`](../custom-extensions/ecc.md) to provide elliptic curve operations over the Secp256k1 curve. It is intended as a patch for the [`k256`](https://crates.io/crates/k256) rust crate and can be swapped in for accelerated signature verification usage. Note that signing from a private key is not supported. 
 
 
 ## Example program
