--- a/book/src/guest-libs/p256.md
+++ b/book/src/guest-libs/p256.md
@@ -1,6 +1,6 @@
 # P256
 
-The P256 guest library uses [`openvm-ecc-guest`](../custom-extensions/ecc.md) to provide elliptic curve operations over the Secp256r1 curve.  
+The P256 guest library uses [`openvm-ecc-guest`](../custom-extensions/ecc.md) to provide elliptic curve operations over the Secp256r1 curve. It is intended as a patch for the [`p256`](https://crates.io/crates/p256) rust crate and can be swapped in for accelerated signature verification usage. Note that signing from a private key is not supported.  
 
 
 ### Config parameters
