--- a/docs/vocs/docs/pages/book/guest-libraries/pairing.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/pairing.mdx
@@ -1,6 +1,6 @@
 # Elliptic Curve Pairing
 
-We'll be working with an example using the BLS12-381 elliptic curve. This is in addition to the setup that needs to be done in the [Writing a Program](../writing-apps/write-program.md) section.
+We'll be working with an example using the BLS12-381 elliptic curve. This is in addition to the setup that needs to be done in the [Writing a Program](../writing-apps/writing-a-program) section.
 
 In the guest program, we will import the `PairingCheck` and `IntMod` traits, along with the BLS12-381 curve structs (**IMPORTANT:** this requires the `bls12_381` feature enabled in Cargo.toml for the `openvm-pairing` dependency), and a few other values that we will need:
 
@@ -8,7 +8,7 @@ In the guest program, we will import the `PairingCheck` and `IntMod` traits, alo
 // [!include ~/snippets/examples/pairing/src/main.rs:imports]
 ```
 
-Additionally, we'll need to initialize our moduli and `Fp2` struct via the following macros. For a more in-depth description of these macros, please see the [OpenVM Algebra](./algebra.md) section.
+Additionally, we'll need to initialize our moduli and `Fp2` struct via the following macros. For a more in-depth description of these macros, please see the [OpenVM Algebra](../acceleration-using-extensions/algebra) section.
 
 ```rust,no_run,noplayground
 // [!include ~/snippets/examples/pairing/src/main.rs:init]
