--- a/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
@@ -1,6 +1,6 @@
 # Ruint 
 
-The Ruint guest library is a fork of [ruint](https://github.com/recmo/uint) that allows for patching of U256 operations with logic from [openvm-bigint-guest](../acceleration-using-extensions/bigint.md).
+The Ruint guest library is a fork of [ruint](https://github.com/recmo/uint) that allows for patching of U256 operations with logic from [openvm-bigint-guest](../acceleration-using-extensions/big-integer).
 
 ## Example matrix multiplication using `U256`
 
