--- a/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
@@ -122,7 +122,7 @@ This tells Rust to use the custom `main` handler when the environment is `no_std
 
 ## Building and running
 
-See the [overview](./overview.md) on how to build and run the program.
+See the [overview](./overview) on how to build and run the program.
 
 ## Using crates that depend on `getrandom`
 
