--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -24,7 +24,7 @@ The proving and verification key will be written to `${target_dir}/openvm/` (and
 
 ## Proof Generation
 
-The `prove` CLI command, at its core, uses the options below. `prove` gets access to all of the options that `run` has (see [Running a Program](../writing-apps/run.md) for more information).
+The `prove` CLI command, at its core, uses the options below. `prove` gets access to all of the options that `run` has (see [Running a Program](../writing-apps/running-a-program) for more information).
 
 ```bash
 cargo openvm prove [app | stark | evm]
@@ -47,7 +47,7 @@ The `app` subcommand generates an application-level proof, the `stark` command g
 > ⚠️ **WARNING**
 > In order to run the `evm` subcommand, you must have previously called the costly `cargo openvm setup`, which requires very large amounts of computation and memory (~200 GB).
 
-See [EVM Proof Format](./verify.md#evm-proof-json-format) for details on the output format for `cargo openvm prove evm`.
+See [EVM Proof Format](./verifying-proofs#evm-proof-json-format) for details on the output format for `cargo openvm prove evm`.
 
 ## Commit Hashes
 
