--- a/docs/vocs/docs/pages/specs/reference/instruction-reference.mdx
+++ b/docs/vocs/docs/pages/specs/reference/instruction-reference.mdx
@@ -1,7 +1,7 @@
 # OpenVM Instruction Mapping
 
 In this document, we provide a mapping between the representation of instructions
-in the OpenVM codebase and the instructions in the [ISA specification](../specs/ISA.md).
+in the OpenVM codebase and the instructions in the [ISA specification](../openvm/isa).
 
 - Instructions in OpenVM implement the `LocalOpcode` trait. Different groups of `LocalOpcode`s from different VM extensions may be combined to form a set of instructions for a customized VM using several extensions.
 - The PHANTOM instruction may be extended in each VM extension by adding new sub-instructions with different `PhantomDiscriminant` values.
