--- a/docs/vocs/docs/pages/specs/reference/transpiler.mdx
+++ b/docs/vocs/docs/pages/specs/reference/transpiler.mdx
@@ -1,6 +1,6 @@
 # RISC-V ELF Transpilation to OpenVM Executable
 
-The OpenVM framework supports transpilation of a RISC-V ELF consisting of the RV32IM instruction set as well as [custom RISC-V instructions](./RISCV.md) specified by VM extensions into an OpenVM executable.
+The OpenVM framework supports transpilation of a RISC-V ELF consisting of the RV32IM instruction set as well as [custom RISC-V instructions](../reference/riscv-custom-code) specified by VM extensions into an OpenVM executable.
 
 ## Transpiler Framework
 
@@ -10,11 +10,11 @@ The transpiler is a function that converts a [RISC-V ELF](https://github.com/ris
 - Starting program counter `pc_0`
 - Initial data memory
 
-The OpenVM executable forms a part of the [initial VM state](./ISA.md#virtual-machine-state).
+The OpenVM executable forms a part of the [initial VM state](../openvm/isa#virtual-machine-state).
 
 We define a RISC-V **machine code block** to be a 32-bit aligned contiguous sequence of bits in the RISC-V program memory, where the bit length is variable and a multiple of 32. The code block _may_ contain instructions from standard or non-standard RISC-V ISA extensions, but it may also contain arbitrary bits.
 
-The transpiler is configured upon construction with the set of VM extensions to support. In order to be supported by the transpiler, a VM extension must specify a set of RISC-V machine code blocks and rules for mapping each code block to a sequences of _potentially multiple_ [OpenVM instructions](./ISA.md#openvm-instruction-set).
+The transpiler is configured upon construction with the set of VM extensions to support. In order to be supported by the transpiler, a VM extension must specify a set of RISC-V machine code blocks and rules for mapping each code block to a sequences of _potentially multiple_ [OpenVM instructions](../openvm/isa#openvm-instruction-set).
 
 The transpilation rules must satisfy:
 
@@ -41,7 +41,7 @@ The OpenVM ISA treats `[0:4]_1` as normal read/write memory and makes no guarant
 
 ## Transpiler Specification for Default VM Extensions
 
-This section specifies the behavior of the transpiler for the default VM extensions with the custom RISC-V instructions specified [here](./RISCV.md). We use the following notation:
+This section specifies the behavior of the transpiler for the default VM extensions with the custom RISC-V instructions specified [here](../reference/riscv-custom-code). We use the following notation:
 
 - Let `ind(rd)` denote `4 * (register index)`, which is in `0..128`. In particular, it fits in one field element.
 - We use `itof` for the function that takes 12-bits (or 21-bits in case of J-type) to a signed integer and then mapping to the corresponding field element. So `0b11…11` goes to `-1` in `F`.
@@ -50,7 +50,7 @@ This section specifies the behavior of the transpiler for the default VM extensi
 - We use `zero_extend_24` to convert an unsigned integer with at most 24 bits into a 24-bit unsigned integer by zero extension. This is used in conjunction with `utof` to convert unsigned integers to field elements.
 - We use `sign_of(imm)` to get the sign bit of the immediate `imm`.
 - The notation `imm[0:4]` means the lowest 5 bits of the immediate.
-- For a phantom instruction `ins`, `disc(ins)` is the discriminant specified in the [ISA specification](./ISA.md#system-instructions).
+- For a phantom instruction `ins`, `disc(ins)` is the discriminant specified in the [ISA specification](../openvm/isa#system-instructions).
 - For a phantom instruction `ins` and a 16-bit `c_upper`, `phantom_c(c_upper, ins) = c_upper << 16 | disc(ins)` is the corresponding 32-bit operand `c` for PHANTOM.
 
 We now specify the transpilation for system instructions and the default set of VM extensions.
@@ -215,7 +215,7 @@ Each VM extension's behavior is specified below.
 
 ## OpenVM Kernel Code Transpilation
 
-This section specifies the transpilation of custom RISC-V [kernel code](./RISCV.md#classification-of-custom-risc-v-machine-code) to OpenVM instructions.
+This section specifies the transpilation of custom RISC-V [kernel code](../reference/riscv-custom-code#classification-of-custom-risc-v-machine-code) to OpenVM instructions.
 This transpilation differs from the ones described above in that a custom RISC-V code block of more than 32-bits is used to specify a single OpenVM instruction,
 and a single 32-bit RISC-V instruction is also used to specify multiple (nonexistent) instructions.
 
