--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -24,7 +24,7 @@ The proving and verification key will be written to `${target_dir}/openvm/` (and
 
 ## Proof Generation
 
-The `prove` CLI command, at its core, uses the options below. `prove` gets access to all of the options that `run` has (see [Running a Program](../writing-apps/running-a-program) for more information).
+The `prove` CLI command, at its core, uses the options below. `prove` gets access to all of the options that `run` has (see [Running a Program](/book/writing-apps/running-a-program) for more information).
 
 ```bash
 cargo openvm prove [app | stark | evm]
