--- a/docs/vocs/docs/pages/book/acceleration-using-extensions/elliptic-curve-cryptography.mdx
+++ b/docs/vocs/docs/pages/book/acceleration-using-extensions/elliptic-curve-cryptography.mdx
@@ -2,7 +2,7 @@
 
 The OpenVM Elliptic Curve Cryptography Extension provides support for elliptic curve operations through the `openvm-ecc-guest` crate.
 
-Developers can enable arbitrary Weierstrass curves by configuring this extension with the modulus for the coordinate field and the coefficients in the curve equation. Preset configurations for the secp256k1 and secp256r1 curves are provided through the [K256](../guest-libraries/k256) and [P256](../guest-libraries/p256) guest libraries.
+Developers can enable arbitrary Weierstrass curves by configuring this extension with the modulus for the coordinate field and the coefficients in the curve equation. Preset configurations for the secp256k1 and secp256r1 curves are provided through the [K256](/book/guest-libraries/k256) and [P256](/book/guest-libraries/p256) guest libraries.
 
 ## Available traits and methods
 
