--- a/docs/vocs/docs/pages/book/getting-started/introduction.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/introduction.mdx
@@ -27,10 +27,10 @@ OpenVM is an open-source zero-knowledge virtual machine (zkVM) framework focused
 The following chapters will guide you through:
 
 - [Getting started](../getting-started/install).
-- [Writing applications](../writing-apps/overview) in Rust targeting OpenVM and generating proofs.
-- [Acceleration using extensions](../acceleration-using-extensions/overview) to optimize your Rust programs.
-- An assortment of helpful [guest libraries](../guest-libraries/keccak256) designed for direct use within your guest programs.
-- [How to add custom VM extensions](../advanced-usage/creating-a-new-extension).
+- [Writing applications](/book/writing-apps/overview) in Rust targeting OpenVM and generating proofs.
+- [Acceleration using extensions](/book/acceleration-using-extensions/overview) to optimize your Rust programs.
+- An assortment of helpful [guest libraries](/book/guest-libraries/keccak256) designed for direct use within your guest programs.
+- [How to add custom VM extensions](/book/advanced-usage/creating-a-new-extension).
 
 ## Security Status
 
