--- a/docs/vocs/docs/pages/book/writing-apps/compiling.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/compiling.mdx
@@ -25,7 +25,7 @@ OpenVM-specific artifacts will be placed in `${target_dir}/openvm/`, but if `--o
 
 - `--config <CONFIG>`
 
-  **Description**: Path to the OpenVM config `.toml` file that specifies the VM extensions. By default will search the manifest directory for `openvm.toml`. If no file is found, OpenVM will use a default configuration. Currently the CLI only supports known extensions listed in the [Using Existing Extensions](../acceleration-using-extensions/overview) section. To use other extensions, use the [SDK](../advanced-usage/sdk).
+  **Description**: Path to the OpenVM config `.toml` file that specifies the VM extensions. By default will search the manifest directory for `openvm.toml`. If no file is found, OpenVM will use a default configuration. Currently the CLI only supports known extensions listed in the [Using Existing Extensions](/book/acceleration-using-extensions/overview) section. To use other extensions, use the [SDK](/book/advanced-usage/sdk).
 
 - `--output_dir <OUTPUT_DIR>`
 
