--- a/docs/vocs/docs/pages/book/writing-apps/solidity-sdk.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/solidity-sdk.mdx
@@ -1,8 +1,8 @@
 # Solidity SDK
 
-As a supplement to OpenVM, we provide a [Solidity SDK](https://github.com/openvm-org/openvm-solidity-sdk) containing OpenVM verifier contracts generated at official release commits using the `cargo openvm setup` [command](../advanced-usage/sdk#setup). The contracts are built at every _minor_ release as OpenVM guarantees verifier backward compatibility across patch releases.
+As a supplement to OpenVM, we provide a [Solidity SDK](https://github.com/openvm-org/openvm-solidity-sdk) containing OpenVM verifier contracts generated at official release commits using the `cargo openvm setup` [command](/book/advanced-usage/sdk#setup). The contracts are built at every _minor_ release as OpenVM guarantees verifier backward compatibility across patch releases.
 
-Note that these builds are for the default aggregation VM config which should be sufficient for most users. If you use a custom config, you will need to manually generate the verifier contract using the [OpenVM SDK](../advanced-usage/sdk).
+Note that these builds are for the default aggregation VM config which should be sufficient for most users. If you use a custom config, you will need to manually generate the verifier contract using the [OpenVM SDK](/book/advanced-usage/sdk).
 
 ## Installation
 
