--- a/docs/vocs/docs/pages/specs/architecture/continuations.mdx
+++ b/docs/vocs/docs/pages/specs/architecture/continuations.mdx
@@ -238,7 +238,7 @@ memory argument.
 
 The overall runtime execution of a program is broken into **segments** (the logic of when to segment can be custom and
 depend on many factors). Each segment is proven in a separate STARK VM circuit as described
-in [Circuit Architecture](../architecture/circuit-architecture). The public values of the circuit must contain the pre- and post-state commitments
+in [Circuit Architecture](/specs/architecture/circuit-architecture). The public values of the circuit must contain the pre- and post-state commitments
 to the segment. The state consists of the active program counter and the full state of memory. (Recall in our
 architecture that registers are part of memory, so register state is included in memory state).
 
